--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </div>
       </div>
       <button id="searchBtn" class="search__btn">
-        <img src="/img/search.svg" alt="" srcset="" />
+        <img src="./img/search.svg" alt="" srcset="" />
       </button>
     </div>
     <div id="requestContainer" class="weather__card">
       <div class="card__adressName" id="adressName">Esperando busqueda</div>
       <div class="card__celsius">
         <img
-          src="/img/thermostat.svg"
+          src="./img/thermostat.svg"
           class="thermostat"
           alt="thermostat"
           srcset=""
@@ -43,11 +43,11 @@
       </div>
       <div class="card__minmax">
         <div class="min">
-          <img src="/img/cold.svg" alt="" srcset="" />
+          <img src="./img/cold.svg" alt="" srcset="" />
           <span id="minText">-</span>ºC
         </div>
         <div class="max">
-          <img src="/img/sun.svg" alt="" srcset="" />
+          <img src="./img/sun.svg" alt="" srcset="" />
           <span id="maxText">-</span>ºC
         </div>
       </div>
